<resources>
    <string name="app_name">Photos</string>
    <string name="photos">Photos</string>
    <string name="set_wallpaper">Set as Wallpaper</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="download">Download</string>
    <string name="location">Location:</string>
    <string name="width">Width:</string>
    <string name="height">Height:</string>
    <string name="views">Views:</string>
    <string name="instagram">Instagram:</string>
    <string name="downloads">Downloads:</string>
    <string name="likes">Likes:</string>
    <string name="set_as_wallpaper">Set as Wallpaper</string>
    <string name="set_as">Set as</string>
    <string name="search">Search</string>
</resources>